style.css
/* ... */
.drawer-menu {
	display: flex;
	flex-direction: column;
	box-sizing: padding-box;
	margin: initial;
	padding-bottom: var(--margin-unit);
	width: var(--drawer-width);
	min-height: 100vh;
}

.drawer-menu > li {
	margin-top: var(--margin-unit);
}

.drawer-menu > hr {
	width: 100%;
}

.icon {
	stroke-linecap: round;
}

.drawer-labelled-button {
	display: flex;
	align-items: center;
	padding: 0;
	width: 100%;
	height: calc(var(--hamburger-length) + var(--border-width));
	text-align: left;
	font-size: inherit;
}

.drawer-labelled-button:not(:disabled) {
	cursor: pointer;
}

.drawer-icon {
	flex-shrink: 0;
	margin-right: var(--margin-unit);
	width: calc(var(--border-width) + var(--hamburger-length));
	height: calc(var(--border-width) + var(--hamburger-length));
	overflow: hidden;
}

.avatar {
	border-radius: 50%;
	overflow: hidden;
	white-space: normal;
}

@media (prefers-contrast: more) {
	.drawer-icon.avatar {
		box-sizing: border-box;
		border: solid var(--border-width) var(--border-color);
	}
}

.filter-clear-button {
	appearance: none;
	fill: var(--active-filter-background-color);
	stroke: currentColor;
}

.filter-clear-button:disabled {
	fill: var(--disabled-button-fill);
	stroke: var(--disabled-button-stroke);
}

.search-label {
	display: flex;
	align-items: center;
}

.search-label > svg {
	cursor: pointer;
	fill: rgb(var(--background-color-rgb));
	stroke: currentColor;
}

.filter-button .avatar > img {
	width: 100%;
	height: 100%;
}

.filter-button[aria-checked="false"] .avatar > img {
	opacity: .4
}

.feed-filter {
	flex-grow: 1;
}

.feed-filter > ul {
	padding: initial;
}

.feed-filter > ul > li {
	margin: var(--margin-unit) 0;
}

.about-button {
	fill: rgb(var(--background-color-rgb));
	stroke: currentColor;
}

.main-container {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

main {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

.timeline > li {
	display: inline-block;
}

.date-heading {
	position: sticky;
	z-index: 1; /* Put it above `.event-thumbnail-container`. */
	top: 0;
	text-align: center;
	background-color: rgba(var(--background-color-rgb), 0.8);
	-webkit-backdrop-filter: blur(10px);
	backdrop-filter: blur(10px);
	border-bottom: solid var(--border-width) var(--border-color);
	break-after: avoid-page;
}

@supports not ((backdrop-filter: blur(10px)) or (-webkit-backdrop-filter: blur(10px))) {
	.date-heading {
		background-color: rgb(var(--background-color-rgb));
	}
}

@media (prefers-contrast: more) {
	.date-heading {
		background-color: rgb(var(--background-color-rgb));
		-webkit-backdrop-filter: none;
		backdrop-filter: none;
	}
}

.now {
	margin: var(--margin-unit) 0;
	border-top: solid var(--border-width) var(--border-color);
	border-bottom: solid var(--border-width) var(--border-color);
	text-align: center;
}

/* Animate the time separator to indicate that the time is dynamically updated. */
/*
 * Note on accessibility concerns:
 *
 * Yes, this is the condemned [^1] flash effect. However, I think this is fine because the animation
 * is far below the threshold of unacceptable flashes as specified by WCAG 2.1 [^2], both in terms
 * of frequency and of occupied area of visual field.
 *
 * Also, the animation is disabled if `prefers-reduced-motion` media feature is enabled.
 *
 * [^1]: <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blink>
 * [^2]: <https://www.w3.org/TR/WCAG21/#dfn-general-flash-and-red-flash-thresholds>
 */
.flashing-time .time-separator {
	animation: 2s flash infinite;
}

@keyframes flash {
	from {
		/* Animate `opacity` instead of `visibility`
		 * to prevent screen readers from announcing the change when focused. */
		opacity: 1;
	}
	49.99999% {
		opacity: 1;
	}
	50% {
		opacity: 0;
	}
	to {
		opacity: 0;
	}
}

@media (prefers-reduced-motion) {
	.flashing-time .time-separator {
		animation: none;
	}
}

.ongoing {
	background-color: #FF04;
}

.event {
	position: relative;
	width: var(--event-width);
	margin-top: calc(-1 * var(--border-width));
	border: solid var(--border-width) var(--border-color);
	border-left: none;
	border-right: none;
	padding-bottom: var(--margin-unit);
	break-inside: avoid;
}

.event-padding {
	padding: var(--margin-unit);
}

.event-header-grid {
	display: grid;
}

.event-thumbnail-container {
	position: relative;
	order: -1;
}

.event-thumbnail {
	display: block;
	width: 100%;
	aspect-ratio: 16 / 9;
}

.event-duration {
	position: absolute;
	inset: auto 0 0 auto;
	border-top-left-radius: 5px;
	padding: 0 calc(var(--margin-unit) / 2);
	background-color: rgba(var(--background-color-rgb), .3);
	-webkit-backdrop-filter: blur(5px);
	backdrop-filter: blur(5px);
	color: var(--color);
}

@supports not ((backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px))) {
	.event-duration {
		background-color: rgba(var(--background-color-rgb), .8);
	}
}

@media (prefers-contrast: more) {
   .event-duration	{
	   background-color: rgb(var(--background-color-rgb));
		-webkit-backdrop-filter: none;
		backdrop-filter: none;
	}
}

.event-members {
	display: flex;
	padding: 0 var(--margin-unit);
	height: 60px;
	overflow-x: scroll;
	white-space: nowrap;
}

.event-members > li + li {
	margin-left: var(--margin-unit);
}

.event-members .avatar {
	display: block;
	width: 60px;
	height: 60px;
}

.popup-container {
	position: absolute;
	inset: var(--margin-unit) var(--margin-unit) auto auto;
}

.popup-toggle {
	cursor: pointer;
}

.popup-backdrop-button {
	position: fixed;
	z-index: 3;
	inset: 0;
	outline-offset: -3px;
	padding: initial;
	width: 100vw;
	height: 100vh;
	-webkit-backdrop-filter: brightness(.6);
	backdrop-filter: brightness(.6);
}
/* ... */

